SPCTR-3506: Fix - Modal link component is not visible due to low z-index (#3612)
* resolved link component visibility issue

* resolved link component visibility issue

* removed unwanted changes

* fixed modal component popup z-index issue

* updated z-index value

* removed unwanted changes

* removed unwanted changes

---------

--- a/src/blocks/modal/style.scss
+++ b/src/blocks/modal/style.scss
@@ -24,7 +24,6 @@ body {
 		left: 0;
 		right: 0;
 		display: flex;
-		z-index: 9999999;
 		visibility: visible;
 
 		.uagb-modal-popup-close {
@@ -60,7 +59,6 @@ body {
 		background: #fff;
 		color: #333;
 		position: relative;
-		z-index: 9999999;
 
 		.uagb-modal-popup-content::-webkit-scrollbar {
 			width: 5px;
